--- a/config.json
+++ b/config.json
@@ -39,7 +39,10 @@
 	"rolesStuff":{
 		"dotRole" : "733423374776139816",
 		"ghayebRole" : "740277714770198621",
-		"hazerRole" : "740278480029089813"
+		"hazerRole" : "740278480029089813",
+		"dabirRole" : "735063970951462923",
+		"R111" : "733365018510229516"
+		
 	}
 
 }
