--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
 	"prefix": "-",
+
+	"allameGuild": "733245860825006171",
 	
 
 	"homeworkStuff":{
@@ -14,7 +16,7 @@
 		"zabanC"   : "735060758941139005", "zaban" : "زبان",
 		"diniC"    : "735060810031693845", "dini" : "دینی",
 		"adabiatC" : "735060837173297174", "adabiat" : "ادبیات",
-
+		"vazitaTakalif": "760140446890065971",
 		"ersalTakalif" : "734346827616354355"
 
 	},
@@ -41,9 +43,7 @@
 		"ghayebRole" : "740277714770198621",
 		"hazerRole" : "740278480029089813",
 		"dabirRole" : "735063970951462923",
-		"R111" : "733365018510229516",
-		"taklifAnjamNashode" :"759344426026926126",
-		"taklifAnjamShode" :"759344738167291915"
+		"R111" : "733365018510229516"
 		
 	}
 
